--- a/web/resources/public/index.html
+++ b/web/resources/public/index.html
@@ -8,6 +8,6 @@
 <body>
 <div id="app">
 </div>
-<script src="js/app.js" type="text/javascript"></script>
+<script src="js/web.js" type="text/javascript"></script>
 </body>
 </html>
